Table users {
  id int [pk, increment]
  name varchar
  email varchar [unique]
  password varchar
  role enum("admin", "petugas", "pelanggan")
  created_at timestamp
}

Table kendaraan {
  id int [pk, increment]
  user_id int [ref: > users.id]
  title varchar
  plate_number varchar [unique]
  brand varchar
  model varchar
  year int
  rental_price decimal
  status enum("available", "rented")
  description text
  created_at datetime
}

Table rentals {
  id int [pk, increment]
  user_id int [ref: > users.id]
  vehicle_id int [ref: > kendaraan.id]
  rental_date date
  return_date date
  total_price decimal
  payment_status enum('unpaid', 'paid')
  rental_status enum('ongoing', 'returned')
  created_at datetime
}